--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 # Database Configuration
-MONGODB_URI=mongodb://localhost:27017/zenthra
-DATABASE_URL=mongodb://localhost:27017/zenthra
+MONGODB_URI=mongodb://localhost:27017/morethanfashion
+DATABASE_URL=mongodb://localhost:27017/morethanfashion
 
 # Server Configuration  
 PORT=5000
